--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ header{
 	}
 
 		/* lecturers titles */
-		.right-title{
+		.lecturers-title{
 			color: 	#d42e44;
 			font-size: 35px;
 			display: inline-block;
